[package]
name = "checkpipe"
version = "0.1.1"
authors = ["Chris Barnes <chrislloydbarnes@gmail.com>"]
edition = "2021"
description = "Perform a computation over some bytes passing through some struct"
repository = "https://github.com/clbarnes/checkpipe-rs"
license = "MIT"
keywords = ["checksum", "read", "write", "digest", "hash"]
categories = ["cryptography", "data-structures", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cargo-release = "0.24.10"

[package.metadata.release]
publish = false
